--- a/02-inline-internal-stylesheets/materials/styles.css
+++ b/02-inline-internal-stylesheets/materials/styles.css
@@ -1,3 +1,8 @@
+@font-face{
+  font-family: 'Gravitas One';
+  src: url(http://fonts.googleapis.com/css?family=Gravitas+One);
+}
+
 html {
 	padding-top: 25px;	
 	background-image: url(images/bg_page.png); 
